fix for font rendering issue on safari

--- a/src/index.scss
+++ b/src/index.scss
@@ -77,6 +77,7 @@ body {
 
 h1 {
   font-family: 'subset Playfair Display', Times, serif;
+  font-weight: normal;
   font-size: $size-xl;
 }
 h2 {
